# subsort

./: .replit  LICENSE  MANIFEST.in  README.md  READMEBOY.md  demo_subdomains.txt  final_demo.csv  install.sh  main.py  pyproject.toml  replit.md  setup.py  test_advanced.txt  test_all_features.py  test_all_modules.txt  test_combined.txt  test_comprehensive.py  test_domains.txt  test_individual.txt  test_individual_only.txt  test_output.csv  test_output.json  test_output.txt  test_plain.txt  test_plain_output.txt  test_results.json  test_subdomains.txt
attached_assets/: Pasted--SubSort-Complete-Module-Reference-All-Modules-with-Algorithms-Libraries-1-tec-1750320420185_1750320420185.txt  Pasted--SubSort-Enhanced-CLI-Recon-Tool-Specification-Overview-SubSort-is-a-high-performance-Pyt-1750316576297_1750316576297.txt  Pasted--techstack-Detect-and-sort-subdomains-based-on-their-tech-stack-vhost-Perform-virtual-host--1750318630558_1750318630558.txt  Pasted-SubSort-Comprehensive-Test-Suite-All-Modules--1750323182745_1750323182745.txt
subsort/: __init__.py  cli.py  ui.py
subsort/core/: __init__.py  http_client.py  scanner.py
subsort/modules/: __init__.py  auth.py  base.py  js.py  (+12 more)
subsort_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_all_modules_modules/: faviconhash_results.txt  responsetime_results.txt  robots_results.txt  server_results.txt  status_results.txt  techstack_results.txt  title_results.txt  vhost_results.txt
test_combined_modules/: server_results.txt  status_results.txt  title_results.txt
test_individual_modules/: server_results.txt  status_results.txt  techstack_results.txt
test_individual_only_modules/: server_results.txt  status_results.txt
(+4 files in other folders)
